--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -577,6 +577,14 @@ input, select, textarea {
 		opacity: 1.0;
 	}
 
+	.profileImg {
+		width: 600px;  
+		height: 800px;  
+		object-position: center;  
+		position: relative;
+	}
+
+
 /* Box */
 
 	.box {
@@ -1140,9 +1148,11 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1155,7 +1165,7 @@ input, select, textarea {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("../../images/bg.jpg");
+			background-image: url("../../images/bg_mountains.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
