Finished adding sign/signup sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,15 @@ input, select, textarea {
 	appearance: none;
 }
 
+input[type=text], input[type=password] {
+	width: 100%;
+	padding: 15px 20px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+  }
+
 /* Basic */
 
 	@-ms-viewport {
